# graphify-obsidian-plugin

./: .gitignore  README.md  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
.github/workflows/: ci.yml
engine/: README.md  pyproject.toml
engine/graphify/: __init__.py  __main__.py  cache.py  detect.py  obsidian.py  obsidian_watch_worker.py  watch.py
engine/tests/: test_deprecation.py  test_obsidian_cli.py
graphify/: analyze.py  cache.py  detect.py  export.py  hooks.py
src/: adapters.ts  graphify-cli.ts  types.ts
src/__tests__/: adapters.test.ts  graphify-cli.test.ts
